<resources>
    <string name="app_name">StudLib</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="pict">pict</string>
    <string name="search">search</string>
    <string name="updateby">updateBy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="jjj">Отзывы</string>
    <string name="pl">Добавьте отзыв</string>
    <string name="enter">Enter…</string>
    <string name="_1_5">Добавьте оценку от 1 до 5</string>
    <string name="save">Save</string>
    <string name="rhh">Войти как гость</string>
    <string name="jrgbkj">Войти</string>
</resources>
