<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsActivity">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="134dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/ic_book"
            android:contentDescription="@string/pict" />

        <RatingBar
            android:id="@+id/ratingBarD"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/bookNameD" />

        <TextView
            android:id="@+id/bookNameD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:lines="2"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@tools:sample/full_names" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadButton"
        android:layout_width="135dp"
        android:layout_height="40dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/download"
        app:layout_constraintEnd_toStartOf="@+id/openButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openButton"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="32dp"
        android:visibility="invisible"
        android:text="@string/open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/downloadButton"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarD" />

    <ScrollView
        android:layout_width="339dp"
        android:layout_height="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/descriptionD"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="268dp"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadButton"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>